--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^0.19",
         "cross-env": "^5.1",
         "laravel-mix": "^5.0.1",
+        "less": "^3.10.3",
+        "less-loader": "^5.0.0",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
